--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -45,6 +46,23 @@
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="italic" />
+
+    <SurfaceView
+        android:id="@+id/Surface"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/writeMsg"
+        android:layout_below="@+id/readMsg"
+        android:layout_alignParentStart="true" />
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/cameraPreview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/writeMsg"
+        android:layout_below="@+id/readMsg"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/Surface" />
 
     <EditText
         android:id="@+id/writeMsg"
